# oxypogon

./: .dockerignore  .eleventy.js  .gitignore  .pre-commit-config.yaml  CITATION.CFF  CLAUDE.md  Dockerfile  README.md  ai_explanation.txt  axios_config.json  deno.json  docker-compose.yml  font-pairings.js  index.html  main.py  package.json  pyproject.toml  scrape_crossfit.js  test_workout.html  workout_ajax_response.txt  workout_explanation.md  workout_page.html  workout_with_explanation.json
.github/: copilot-instructions.md
.github/workflows/: build-deploy.yml  scrape-workout.yml
components/: sidebar.py
data/: heroes.json  movements.json
outputs/: ai_explanation.txt  workout_explanation.md  workout_with_explanation.json
pages/: home_page.py  workout_page.py  workout_page_2.py
postprocess/: constants.ts  process_workout.ts
services/: page_interface.py
src/: index.njk
src/_data/: site.json  workout.js
src/_includes/components/: footer.njk  header.njk
src/_includes/layouts/: base.njk
src/css/: fonts.css  styles.css
src/heroes/: index.njk
src/js/: theme.js
src/movements/: index.njk  movement.njk
utils/: constants.py
